deploy.yaml
apiVersion: apps/v1  # Corrected API version
kind: Deployment
metadata:
  name: my-web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
    spec:
      containers:
      - name: my-container
        image: nginx:latest
        imagePullPolicy: IfNotPresent  # Added imagePullPolicy
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-web-service
spec:
  selector:
    app: my-web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer  # Or ClusterIP
